--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <p>WebStudio</p>
         <ul>
-          <li><a href="Studio">Studio</a></li>
-          <li><a href="Portfolio">Portfolio</a></li>
-          <li><a href="Contacts">Contacts</a></li>
+          <li><a>Studio</a></li>
+          <li><a>Portfolio</a></li>
+          <li><a>Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
