--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header>
       <nav>
-        <p>WebStudio</p>
+        <p href="">WebStudio</p>
         <ul>
-          <li><a>Studio</a></li>
-          <li><a>Portfolio</a></li>
-          <li><a>Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -25,8 +25,10 @@
       </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <ul>
           <li>
