--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <p href="">WebStudio</p>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -19,7 +19,7 @@
       </nav>
       <address>
         <ul>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -31,90 +31,109 @@
       </section>
       <section>
         <ul>
+          <h2></h2>
           <li>
-            <h4>Strategy</h4>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
+            <h3>Strategy</h3>
+            <p>
+              goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li>
-            <h4>Punctuality</h4>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
+            <h3>Punctuality</h3>
+            <p>
+              the key message to the brand's audience for the best price within
+              the shortest possible time.
+            </p>
           </li>
           <li>
-            <h4>Diligence</h4>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li>
-            <h4>Technologies</h4>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
       <section>
         <h2>What are we doing</h2>
-        <img
-          src="./images/rectangle70.jpg"
-          alt="gadgets1"
-          width="360"
-          height="300"
-        />
-        <img
-          src="./images/rectangle71.jpg"
-          alt="gadgets2"
-          width="360"
-          height="300"
-        />
-        <img
-          src="./images/rectangle72.jpg"
-          alt="gadgets3"
-          width="360"
-          height="300"
-        />
+        <ul>
+          <li>
+            <img
+              src="./images/rectangle70.jpg"
+              alt="gadgets1"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/rectangle71.jpg"
+              alt="gadgets2"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/rectangle72.jpg"
+              alt="gadgets3"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
-        <img
-          src="./images/imgpeople1.jpg"
-          alt="Mark Guerrero"
-          width="264"
-          height="260"
-        />
         <ul>
-          <li><h4>Mark Guerrero</h4></li>
-          <li>Product Designer</li>
-        </ul>
-        <img
-          src="./images/imgpeople2.jpg"
-          alt="Tom Ford"
-          width="264"
-          height="260"
-        />
-        <ul>
-          <li><h4>Tom Ford</h4></li>
-          <li>Frontend Developer</li>
-        </ul>
-        <img
-          src="./images/imgpeople3.jpg"
-          alt="Camila Garcia"
-          width="264"
-          height="260"
-        />
-        <ul>
-          <li><h4>Camila Garcia</h4></li>
-          <li>Marketing</li>
-        </ul>
-        <img
-          src="./images/imgpeople4.jpg"
-          alt="Daniel Wilson"
-          width="264"
-          height="260"
-        />
-        <ul>
-          <li><h4>Daniel Wilson</h4></li>
-          <li>UI Designer</li>
+          <li>
+            <img
+              src="./images/imgpeople1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            Product Designer
+          </li>
+          <li>
+            <img
+              src="./images/imgpeople2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            Frontend Developer
+          </li>
+          <li>
+            <img
+              src="./images/imgpeople3.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            Marketing
+          </li>
+          <li>
+            <img
+              src="./images/imgpeople4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            UI Designer
+          </li>
         </ul>
       </section>
     </main>
