--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2></h2>
         <ul>
-          <h2></h2>
           <li>
             <h3>Strategy</h3>
             <p>
-              goal is to identify the business problem to walk away with the
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
             <p>
-              the key message to the brand's audience for the best price within
-              the shortest possible time.
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              growth opportunities and minimize risk..
             </p>
           </li>
           <li>
@@ -102,7 +102,7 @@
               height="260"
             />
             <h3>Mark Guerrero</h3>
-            Product Designer
+            <p>Product Designer</p>
           </li>
           <li>
             <img
@@ -112,7 +112,7 @@
               height="260"
             />
             <h3>Tom Ford</h3>
-            Frontend Developer
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
@@ -122,7 +122,7 @@
               height="260"
             />
             <h3>Camila Garcia</h3>
-            Marketing
+            <p>Marketing</p>
           </li>
           <li>
             <img
@@ -132,7 +132,7 @@
               height="260"
             />
             <h3>Daniel Wilson</h3>
-            UI Designer
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
