--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk..
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
