--- a/portfolio.html
+++ b/portfolio.html
@@ -20,16 +20,18 @@
       <nav class="">
         <a href="./portfolio.html">WebStudio</a>
         <ul class="">
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class=""><a href="./index.html">Studio</a></li>
+          <li class=""><a href="./portfolio.html">Portfolio</a></li>
+          <li class=""><a href="">Contacts</a></li>
         </ul>
       </nav>
       <!-- address -->
       <address class="">
         <ul class="">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+          <li class="">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class=""><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -48,17 +50,17 @@
       <!-- section_image1 -->
       <section class="">
         <ul class="">
-          <li>
+          <li class="">
             <img src="./images/img1.jpg" alt="img" width="360" height="300" />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
-          <li>
+          <li class="">
             <img src="./images/img2.jpg" alt="img" width="360" height="300" />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="">
             <img src="./images/img3.jpg" alt="img" width="360" height="300" />
             <h3>Meditaion App</h3>
             <p>App</p>
@@ -68,17 +70,17 @@
       <!-- section_image2 -->
       <section class="">
         <ul class="">
-          <li>
+          <li class="">
             <img src="./images/img4.jpg" alt="img" width="360" height="300" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="">
             <img src="./images/img5.jpg" alt="img" width="360" height="300" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
-          <li>
+          <li class="">
             <img src="./images/img6.jpg" alt="img" width="360" height="300" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
@@ -88,17 +90,17 @@
       <!-- section_image3 -->
       <section class="">
         <ul class="">
-          <li>
+          <li class="">
             <img src="./images/img7.jpg" alt="img" width="360" height="300" />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
-          <li>
+          <li class="">
             <img src="./images/img8.jpg" alt="img" width="360" height="300" />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
-          <li>
+          <li class="">
             <img src="./images/img9.jpg" alt="img" width="360" height="300" />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
