--- a/portfolio.html
+++ b/portfolio.html
@@ -8,110 +8,128 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <!-- body -->
-  <body class="">
-    <header class="">
+  <body class="body-portfolio">
+    <header class="header-portfolio">
       <!-- nav -->
-      <nav class="">
-        <a href="./portfolio.html">WebStudio</a>
-        <ul class="">
-          <li class=""><a href="./index.html">Studio</a></li>
-          <li class=""><a href="./portfolio.html">Portfolio</a></li>
-          <li class=""><a href="">Contacts</a></li>
+      <nav class="site-navigation">
+        <a href="./portfolio.html" class="logo"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <ul class="link-list">
+          <li class="index-link"><a href="./index.html">Studio</a></li>
+          <li class="portfolio-link">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="contacts-link"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <!-- address -->
-      <address class="">
-        <ul class="">
-          <li class="">
+      <address class="adress-portfolio">
+        <ul class="adress-list">
+          <li class="email-link">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class=""><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+          <li class="tel-link">
+            <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <!-- main -->
-    <main class="">
+    <main class="main-portfolio">
       <!-- section_button -->
-      <section class="">
-        <ul class="">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+      <section class="filter">
+        <ul class="buttons">
+          <li class="all-button-li">
+            <button type="button" class="all-button">All</button>
+          </li>
+          <li class="wabsite-button-li">
+            <button type="button" class="wabsite-button">Web Site</button>
+          </li>
+          <li class="app-button-li">
+            <button type="button" class="app-button">App</button>
+          </li>
+          <li class="design-button-li">
+            <button type="button" class="design-button">Design</button>
+          </li>
+          <li class="marketing-button-li">
+            <button type="button" class="marketing-button">Marketing</button>
+          </li>
         </ul>
       </section>
       <!-- section_image1 -->
-      <section class="">
-        <ul class="">
-          <li class="">
+      <section class="first-section">
+        <ul class="first-list">
+          <li class="app-item">
             <img src="./images/img1.jpg" alt="img" width="360" height="300" />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h3 class="name-images">Banking App Interface Concept</h3>
+            <p class="info-images">App</p>
           </li>
-          <li class="">
+          <li class="marketing-item">
             <img src="./images/img2.jpg" alt="img" width="360" height="300" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="name-images">Cashless Payment</h3>
+            <p class="info-images">Marketing</p>
           </li>
-          <li class="">
+          <li class="app-item">
             <img src="./images/img3.jpg" alt="img" width="360" height="300" />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <h3 class="name-images">Meditaion App</h3>
+            <p class="info-images">App</p>
           </li>
         </ul>
       </section>
       <!-- section_image2 -->
-      <section class="">
-        <ul class="">
-          <li class="">
+      <section class="second-section">
+        <ul class="second-list">
+          <li class="marketing-item">
             <img src="./images/img4.jpg" alt="img" width="360" height="300" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="name-images">Taxi Service</h3>
+            <p class="info-images">Marketing</p>
           </li>
-          <li class="">
+          <li class="design-item">
             <img src="./images/img5.jpg" alt="img" width="360" height="300" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="name-images">Screen Illustrations</h3>
+            <p class="info-images">Design</p>
           </li>
-          <li class="">
+          <li class="marketing-item">
             <img src="./images/img6.jpg" alt="img" width="360" height="300" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="name-images">Online Courses</h3>
+            <p class="info-images">Marketing</p>
           </li>
         </ul>
       </section>
       <!-- section_image3 -->
-      <section class="">
-        <ul class="">
-          <li class="">
+      <section class="third-section">
+        <ul class="third-list">
+          <li class="design-item">
             <img src="./images/img7.jpg" alt="img" width="360" height="300" />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="name-images">Instagram Stories Concept</h3>
+            <p class="info-images">Design</p>
           </li>
-          <li class="">
+          <li class="website-item">
             <img src="./images/img8.jpg" alt="img" width="360" height="300" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h3 class="name-images">Organic Food</h3>
+            <p class="info-images">Web Site</p>
           </li>
-          <li class="">
+          <li class="website-item">
             <img src="./images/img9.jpg" alt="img" width="360" height="300" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="name-images">Fresh Coffee</h3>
+            <p class="info-images">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
-    <footer class="">
-      <a href="./index.html" class="">WebStudio</a>
-      <p class="">
+    <footer class="footer-portfolio">
+      <a href="./portfolio.html" class="logo-footer"
+        >Web<span class="logo-footer-span">Studio</span></a
+      >
+      <p class="footer-info">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
