--- a/portfolio.html
+++ b/portfolio.html
@@ -43,83 +43,72 @@
     </header>
     <!-- main -->
     <main class="main-portfolio">
-      <!-- section_button -->
       <section class="filter">
-        <ul class="buttons">
+        <h1 hidden>name</h1>
+        <!-- First-list-buttons -->
+        <ul class="list">
           <li class="all-button-li">
             <button type="button" class="all-button">All</button>
           </li>
-          <li class="wabsite-button-li">
-            <button type="button" class="wabsite-button">Web Site</button>
+          <li class="website-button-li">
+            <button type="button" class="all-button">Web Site</button>
           </li>
           <li class="app-button-li">
-            <button type="button" class="app-button">App</button>
+            <button type="button" class="all-button">App</button>
           </li>
           <li class="design-button-li">
-            <button type="button" class="design-button">Design</button>
+            <button type="button" class="all-button">Design</button>
           </li>
           <li class="marketing-button-li">
-            <button type="button" class="marketing-button">Marketing</button>
+            <button type="button" class="all-button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <!-- section_image1 -->
-      <section class="first-section">
-        <ul class="first-list">
-          <li class="app-item">
-            <img src="./images/img1.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Banking App Interface Concept</h3>
-            <p class="info-images">App</p>
+        <!-- Second-list -->
+        <ul class="list">
+          <li class="">
+            <a class="link"><img src="./images/img1.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Banking App Interface Concept</h2>
+              <p class="info-images">App</p></a>
           </li>
-          <li class="marketing-item">
-            <img src="./images/img2.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Cashless Payment</h3>
-            <p class="info-images">Marketing</p>
+          <li class="">
+            <a class="link"><img src="./images/img2.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Cashless Payment</h2>
+              <p class="info-images">Marketing</p></a>
           </li>
-          <li class="app-item">
-            <img src="./images/img3.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Meditaion App</h3>
-            <p class="info-images">App</p>
+          <li class="">
+            <a class="link"><img src="./images/img3.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Meditaion App</h2>
+              <p class="info-images">App</p></a>
           </li>
-        </ul>
-      </section>
-      <!-- section_image2 -->
-      <section class="second-section">
-        <ul class="second-list">
-          <li class="marketing-item">
-            <img src="./images/img4.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Taxi Service</h3>
-            <p class="info-images">Marketing</p>
+          <li class="">
+            <a class="link"><img src="./images/img4.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Taxi Service</h2>
+              <p class="info-images">Marketing</p></a>
           </li>
-          <li class="design-item">
-            <img src="./images/img5.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Screen Illustrations</h3>
-            <p class="info-images">Design</p>
+          <li class="">
+            <a class="link"><img src="./images/img5.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Screen Illustrations</h2>
+              <p class="info-images">Design</p></a>
           </li>
-          <li class="marketing-item">
-            <img src="./images/img6.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Online Courses</h3>
-            <p class="info-images">Marketing</p>
+          <li class="">
+            <a class="link"><img src="./images/img6.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Online Courses</h2>
+              <p class="info-images">Marketing</p></a>
           </li>
-        </ul>
-      </section>
-      <!-- section_image3 -->
-      <section class="third-section">
-        <ul class="third-list">
-          <li class="design-item">
-            <img src="./images/img7.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Instagram Stories Concept</h3>
-            <p class="info-images">Design</p>
+          <li class="">
+            <a class="link"><img src="./images/img7.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Instagram Stories Concept</h2>
+              <p class="info-images">Design</p></a>
           </li>
-          <li class="website-item">
-            <img src="./images/img8.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Organic Food</h3>
-            <p class="info-images">Web Site</p>
+          <li class="">
+            <a class="link"><img src="./images/img8.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Organic Food</h2>
+              <p class="info-images">Web Site</p></a>
           </li>
-          <li class="website-item">
-            <img src="./images/img9.jpg" alt="img" width="360" height="300" />
-            <h3 class="name-images">Fresh Coffee</h3>
-            <p class="info-images">Web Site</p>
+          <li class="">
+            <a class="link"><img src="./images/img9.jpg" alt="img" width="360" height="300" />
+              <h2 class="name-images">Fresh Coffee</h2>
+              <p class="info-images">Web Site</p></a>
           </li>
         </ul>
       </section>
