--- a/index.html
+++ b/index.html
@@ -5,25 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+  <!-- Body -->
+  <body class="body-portfolio">
+    <header class="header-portfolio">
+      <!-- nav -->
+      <nav class="site-navigation">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <ul class="link-list">
+          <li class="index-link"><a href="./index.html">Studio</a></li>
+          <li class="portfolio-link">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="contacts-link"><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+      <!-- address -->
+      <address class="adress-portfolio">
+        <ul class="adress-list">
+          <li class="email-link">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="tel-link">
+            <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
+    <!-- Main -->
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
@@ -137,9 +155,12 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <!-- Footer -->
+    <footer class="footer-portfolio">
+      <a href="./index.html" class="logo-footer"
+        >Web<span class="logo-footer-span">Studio</span></a
+      >
+      <p class="footer-info">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
