--- a/portfolio.html
+++ b/portfolio.html
@@ -66,47 +66,47 @@
         <!-- Second-list -->
         <ul class="list">
           <li class="">
-            <a class="link"><img src="./images/img1.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img1.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Banking App Interface Concept</h2>
               <p class="info-images">App</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img2.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img2.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Cashless Payment</h2>
               <p class="info-images">Marketing</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img3.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img3.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Meditaion App</h2>
               <p class="info-images">App</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img4.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img4.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Taxi Service</h2>
               <p class="info-images">Marketing</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img5.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img5.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Screen Illustrations</h2>
               <p class="info-images">Design</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img6.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img6.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Online Courses</h2>
               <p class="info-images">Marketing</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img7.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img7.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Instagram Stories Concept</h2>
               <p class="info-images">Design</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img8.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img8.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Organic Food</h2>
               <p class="info-images">Web Site</p></a>
           </li>
           <li class="">
-            <a class="link"><img src="./images/img9.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"><img src="./images/img9.jpg" alt="img" width="360" height="300" />
               <h2 class="name-images">Fresh Coffee</h2>
               <p class="info-images">Web Site</p></a>
           </li>
