--- a/index.html
+++ b/index.html
@@ -14,76 +14,79 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <!-- Body -->
-  <body class="body-portfolio">
+  <body class="body-studio">
     <header class="header-portfolio">
       <!-- nav -->
-      <nav class="site-navigation">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-span">Studio</span></a
+      <nav class="">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-span link">Studio</span></a
         >
-        <ul class="link-list">
-          <li class="index-link"><a href="./index.html">Studio</a></li>
-          <li class="portfolio-link">
-            <a href="./portfolio.html">Portfolio</a>
+        <ul class="all-link-list list">
+          <li class=""><a class="link-list link" href="./index.html">Studio</a></li>
+          <li class="">
+            <a class="link-list link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="contacts-link"><a href="">Contacts</a></li>
+          <li class=""><a class="link-list link" href="">Contacts</a></li>
         </ul>
       </nav>
       <!-- address -->
       <address class="adress-portfolio">
-        <ul class="adress-list">
-          <li class="email-link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list">
+          <li class="">
+            <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="tel-link">
-            <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+          <li class="">
+            <a class="address-link link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <!-- Main -->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- Button-section -->
+      <section class="">
+        <h1 class="">Effective Solutions for Your Business</h1>
+        <button type="button" class="">Order Service</button>
       </section>
-      <section>
-        <h2></h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <!-- First-section -->
+      <section class="">
+        <h2 class=""></h2>
+        <ul class="">
+          <li class="">
+            <h3 class="">Strategy</h3>
+            <p class="">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="">
+            <h3 class="">Punctuality</h3>
+            <p class="">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="">
+            <h3 class="">Diligence</h3>
+            <p class="">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="">
+            <h3 class="">Technologies</h3>
+            <p class="">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <!-- Second-section -->
+      <section class="">
+        <h2 class="">What are we doing</h2>
+        <ul class="">
+          <li class="">
             <img
               src="./images/rectangle70.jpg"
               alt="gadgets1"
@@ -91,7 +94,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="">
             <img
               src="./images/rectangle71.jpg"
               alt="gadgets2"
@@ -99,7 +102,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="">
             <img
               src="./images/rectangle72.jpg"
               alt="gadgets3"
@@ -109,55 +112,56 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- Thrid-section -->
+      <section class="">
+        <h2 class="">Our Team</h2>
+        <ul class="">
+          <li class="">
             <img
               src="./images/imgpeople1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="">Mark Guerrero</h3>
+            <p class="">Product Designer</p>
           </li>
-          <li>
+          <li class="">
             <img
               src="./images/imgpeople2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="">Tom Ford</h3>
+            <p class="">Frontend Developer</p>
           </li>
-          <li>
+          <li class="">
             <img
               src="./images/imgpeople3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="">Camila Garcia</h3>
+            <p class="">Marketing</p>
           </li>
-          <li>
+          <li class="">
             <img
               src="./images/imgpeople4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="">Daniel Wilson</h3>
+            <p class="">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-portfolio">
-      <a href="./index.html" class="logo-footer"
+    <footer class="footer-portfolio link">
+      <a href="./index.html" class="logo-footer link"
         >Web<span class="logo-footer-span">Studio</span></a
       >
       <p class="footer-info">
