--- a/portfolio.html
+++ b/portfolio.html
@@ -17,26 +17,26 @@
   <body class="body-portfolio">
     <header class="header-portfolio">
       <!-- nav -->
-      <nav class="site-navigation">
-        <a href="./portfolio.html" class="logo"
-          >Web<span class="logo-span">Studio</span></a
+      <nav class="list">
+        <a href="./portfolio.html" class="logo link"
+          >Web<span class="logo-span link">Studio</span></a
         >
-        <ul class="link-list">
-          <li class="index-link"><a href="./index.html">Studio</a></li>
-          <li class="portfolio-link">
-            <a href="./portfolio.html">Portfolio</a>
+        <ul class="all-link-list list">
+          <li class=""><a class="link-list link" href="./index.html">Studio</a></li>
+          <li class="">
+            <a class="link-list link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="contacts-link"><a href="">Contacts</a></li>
+          <li class=""><a class="link-list link" href="">Contacts</a></li>
         </ul>
       </nav>
       <!-- address -->
       <address class="adress-portfolio">
-        <ul class="adress-list">
-          <li class="email-link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list">
+          <li class="">
+            <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="tel-link">
-            <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+          <li class="">
+            <a class="address-link link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -66,57 +66,120 @@
         <!-- Second-list -->
         <ul class="list">
           <li class="">
-            <a href="" class="link"><img src="./images/img1.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img1.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Banking App Interface Concept</h2>
-              <p class="info-images">App</p></a>
+              <p class="info-images">App</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img2.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img2.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Cashless Payment</h2>
-              <p class="info-images">Marketing</p></a>
+              <p class="info-images">Marketing</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img3.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img3.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Meditaion App</h2>
-              <p class="info-images">App</p></a>
+              <p class="info-images">App</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img4.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img4.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Taxi Service</h2>
-              <p class="info-images">Marketing</p></a>
+              <p class="info-images">Marketing</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img5.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img5.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Screen Illustrations</h2>
-              <p class="info-images">Design</p></a>
+              <p class="info-images">Design</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img6.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img6.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Online Courses</h2>
-              <p class="info-images">Marketing</p></a>
+              <p class="info-images">Marketing</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img7.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img7.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Instagram Stories Concept</h2>
-              <p class="info-images">Design</p></a>
+              <p class="info-images">Design</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img8.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img8.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Organic Food</h2>
-              <p class="info-images">Web Site</p></a>
+              <p class="info-images">Web Site</p></a
+            >
           </li>
           <li class="">
-            <a href="" class="link"><img src="./images/img9.jpg" alt="img" width="360" height="300" />
+            <a href="" class="link"
+              ><img
+                src="./images/img9.jpg"
+                alt="img"
+                width="360"
+                height="300"
+              />
               <h2 class="name-images">Fresh Coffee</h2>
-              <p class="info-images">Web Site</p></a>
+              <p class="info-images">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer-portfolio">
-      <a href="./portfolio.html" class="logo-footer"
-        >Web<span class="logo-footer-span">Studio</span></a
+      <a href="./portfolio.html" class="logo-footer link"
+        >Web<span class="logo-footer-span link">Studio</span></a
       >
       <p class="footer-info">
         Increase the flow of customers and sales for your business with digital
