--- a/index.html
+++ b/index.html
@@ -44,38 +44,38 @@
     <!-- Main -->
     <main>
       <!-- Button-section -->
-      <section class="">
-        <h1 class="">Effective Solutions for Your Business</h1>
-        <button type="button" class="">Order Service</button>
+      <section class="button-section">
+        <h1 class="site-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button-studio">Order Service</button>
       </section>
       <!-- First-section -->
       <section class="">
-        <h2 class=""></h2>
-        <ul class="">
+        <h2 class="head-first-section"></h2>
+        <ul class="list">
           <li class="">
-            <h3 class="">Strategy</h3>
-            <p class="">
+            <h3 class="header-first-section">Strategy</h3>
+            <p class="text-section">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="">
-            <h3 class="">Punctuality</h3>
-            <p class="">
+            <h3 class="header-first-section">Punctuality</h3>
+            <p class="text-section">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="">
-            <h3 class="">Diligence</h3>
-            <p class="">
+            <h3 class="header-first-section">Diligence</h3>
+            <p class="text-section">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="">
-            <h3 class="">Technologies</h3>
-            <p class="">
+            <h3 class="header-first-section">Technologies</h3>
+            <p class="text-section">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -84,8 +84,8 @@
       </section>
       <!-- Second-section -->
       <section class="">
-        <h2 class="">What are we doing</h2>
-        <ul class="">
+        <h2 class="second-header">What are we doing</h2>
+        <ul class="list">
           <li class="">
             <img
               src="./images/rectangle70.jpg"
@@ -113,48 +113,48 @@
         </ul>
       </section>
       <!-- Thrid-section -->
-      <section class="">
-        <h2 class="">Our Team</h2>
-        <ul class="">
-          <li class="">
+      <section class="our-team-section">
+        <h2 class="title-thrid-section">Our Team</h2>
+        <ul class="list">
+          <li class="team-list">
             <img
               src="./images/imgpeople1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3 class="">Mark Guerrero</h3>
-            <p class="">Product Designer</p>
+            <h3 class="name-team">Mark Guerrero</h3>
+            <p class="text-section">Product Designer</p>
           </li>
-          <li class="">
+          <li class="team-list">
             <img
               src="./images/imgpeople2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3 class="">Tom Ford</h3>
-            <p class="">Frontend Developer</p>
+            <h3 class="name-team">Tom Ford</h3>
+            <p class="text-section">Frontend Developer</p>
           </li>
-          <li class="">
+          <li class="team-list">
             <img
               src="./images/imgpeople3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3 class="">Camila Garcia</h3>
-            <p class="">Marketing</p>
+            <h3 class="name-team">Camila Garcia</h3>
+            <p class="text-section">Marketing</p>
           </li>
-          <li class="">
+          <li class="team-list">
             <img
               src="./images/imgpeople4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3 class="">Daniel Wilson</h3>
-            <p class="">UI Designer</p>
+            <h3 class="name-team">Daniel Wilson</h3>
+            <p class="text-section">UI Designer</p>
           </li>
         </ul>
       </section>
