--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
             <button type="button" class="all-button">Marketing</button>
           </li>
         </ul>
-        <!-- Second-list -->
+        <!-- Second-portfolio -->
         <ul class="list">
           <li class="">
             <a href="" class="link"
