--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
     <!-- main -->
     <main class="main-portfolio">
       <section class="filter">
-        <h1 hidden>name</h1>
+        <h1 hidden>Meditation App</h1>
         <!-- First-list-buttons -->
         <ul class="list">
           <li class="all-button-li">
@@ -97,7 +97,7 @@
                 width="360"
                 height="300"
               />
-              <h2 class="name-images">Meditaion App</h2>
+              <h2 class="name-images">Meditation App</h2>
               <p class="info-images">App</p></a
             >
           </li>
